--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
+        "mpdf/mpdf": "^8.1",
         "spatie/laravel-permission": "^5.5",
         "wire-elements/modal": "^1.0"
     },
